SFDC Automation/src/objects/Survey_Assignment_Member__c.object
<CustomObject>
    <description>The employees that will be assigned to conduct surveys.  Random distribution of survey activities will be issued to the employees.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The date to end assigning activities to the member.</description>
        <inlineHelpText>The date to end assigning activities to the member.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>User__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date to start assigning activities to the member.</description>
        <inlineHelpText>The date to start assigning activities to the member.  Used for vacations and leaves of absences.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the members associated to the queue.  Used to determine whether the assign activities.</description>
        <inlineHelpText>The status of the members associated to the queue.  Used to determine whether the assign activities.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Assignment__c</fullName>
        <description>Configuration of how the survey activities will be distributed.</description>
        <inlineHelpText>The details of how the distribution will be handled of survey activities to agents and other users.</inlineHelpText>
        <label>Survey Assignment</label>
        <referenceTo>Survey_Assignment__c</referenceTo>
        <relationshipLabel>Survey Assignment Members</relationshipLabel>
        <relationshipName>Survey_Assignment_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the user that will be assigned to the membership queue.</description>
        <inlineHelpText>The name of the user that will be assigned to the membership queue.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Survey_Assignment_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workload_Adjustment__c</fullName>
        <label>Workload Adjustment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Assignment Member</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Survey Assignment Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Assignment Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>